Fixed border radius and spacing

--- a/assets/styles/components/_hero-section.scss
+++ b/assets/styles/components/_hero-section.scss
@@ -121,9 +121,16 @@
   background: #071927;
   color: white;
   width: 100%;
+  padding: 3rem 4rem;
 
   &:nth-of-type(even) {
     background: #C6CACD;
     color: black;
+  }
+
+  
+  @media (max-width: 500px) {
+    font-size: 1.6rem;
+    border-radius: 80px;
   }
 }
